using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SEC.Associations
{
    public static class AnimatorAssociations
    {
        public const string Jump    = "onJumping";
        public const string isEggTake  = "isEggTake";
        public const string isGrounded = "isGrounded";
        public const string xVelocity  = "xVelocity";
        public const string yVelocity  = "yVelocity";
    }
}
